# rustere

./: Cargo.toml  README.md
.github/workflows/: build.yaml  fmt.yaml  test.yaml
src/: lib.rs  main.rs
tests/: integration_tests.rs
